Enhance app layout and styling: add privacy screen, update app name and icon, improve login screen design, and modify button component for loading state

--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "rizoka_mobile_expo",
-    "slug": "rizoka_mobile_expo",
+    "name": "Rizoka",
+    "slug": "Rizoka",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
